# rusty_notes

./: Cargo.toml
src/: db.rs  error.rs  handlers.rs  main.rs  models.rs  routes.rs
